Inclusión de filtros y servicios para el listado de cofrades

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -16,7 +16,7 @@
       
       <section ui-view></section>
       
-      <a ui-sref="state1">Ir a 1</a>
+      <a ui-sref="cofrades">Ir a 1</a>
       <footer>
         <time datetime="2015-05-15 19:00">May 15</time>
       </footer>
