--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,22 +6,38 @@
     <title>Gestion CJN</title>
     <!-- bower:css -->
     <!-- endbower -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
     
-  <body>
-    <article>
-      <header>
-        <h2>Gestion CJN</h2>
-      </header>
-      
-      <section ui-view></section>
-      
-      <a ui-sref="cofrades">Ir a 1</a>
-      <footer>
-        <time datetime="2015-05-15 19:00">May 15</time>
-      </footer>
+  <body layout="column" ng-controller='AppCtrl as app'>
+    <md-toolbar layout="row">
+      <div class="md-toolbar-tools">
+        <md-button ng-click="app.toggleSidenav('menuIzquierdo')" hide-gt-sm class="md-icon-button">
+          <md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
+        </md-button>
+        <h1>Gestion CJN</h1>
 
-    </article>
+      </div>
+    </md-toolbar>
+    <div layout="row" flex>
+        <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="menuIzquierdo" md-is-locked-open="$mdMedia('gt-sm')">
+          <md-list>
+            <md-list-item ng-click="navigateTo('data usage', $event)">
+              <md-icon md-font-library="material-icons">cloud</md-icon>
+              <p>Data Usage</p>
+            </md-list-item>
+          <md-list>
+        </md-sidenav>
+        
+        <div layout="column" flex id="content">
+            <md-content layout="column" flex class="md-padding" ui-view>
+            
+            </md-content>
+            <a ui-sref="cofrades">Ir a 1</a>
+        </div>
+    
+    </div>
+
     <!-- bower:js -->
     <!-- endbower -->
     <script src="js/all.min.js"></script>
