--- a/src/app/index.html
+++ b/src/app/index.html
@@ -63,7 +63,7 @@
         </md-sidenav>
         
         <div layout="column" flex id="content">
-            <md-content layout="column" flex class="md-padding page-container" ui-view></md-content>
+            <md-content layout="column" flex class="md-padding page-container" ui-view scrolly></md-content>
         </div>
     
     </div>
