--- a/src/content/styles/cofrades.scss
+++ b/src/content/styles/cofrades.scss
@@ -18,5 +18,23 @@
   p.direccion{
     color: rgba(0, 0, 0, 0.541176);
   }
+}
 
+.listaCofrades{
+  .cofrade-detalle {
+    .md-item-text {
+      padding: 8px;
+      background: #f0f0f0;
+      border-radius: 3px; 
+    }
+    .md-item-text h3,  .md-item-text p {
+      text-align: center;
+      padding: 0;
+      margin: 0; 
+    }
+    .md-item-text p{
+      padding-top: 8px;
+    }
+  }
+  .angular-google-map-container { height: 300px; }
 }
