Cambio de resolucion de promesa del mapa del controlador a ruta

--- a/src/app/cofrades/detail/cofradeDetalle.html
+++ b/src/app/cofrades/detail/cofradeDetalle.html
@@ -119,7 +119,7 @@
             </div>
             <div offset="5" flex="50">
               <ui-gmap-google-map center='vm.maps.coord' zoom='vm.maps.zoom'>
-                <ui-gmap-marker coords="vm.maps.coord" idKey="1"></ui-gmap-marker>
+                <ui-gmap-marker coords="vm.maps.marker" idKey="1" ></ui-gmap-marker>
               </ui-gmap-google-map>
             </div>
           </div>
